// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimeInput  Check snapshots default 1`] = `
<span
  class="TimeInput"
>
  <span
    class="Textinput Textinput_theme_normal Textinput_size_s Textinput_baseline TimeInput-Hours"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="Textinput-Control"
      type="number"
      value="16"
    />
    <span
      class="Textinput-Box"
    />
  </span>
  <span
    class="TimeInput-Delimiter"
  >
    :
  </span>
  <span
    class="Textinput Textinput_theme_normal Textinput_size_s Textinput_baseline TimeInput-Minutes"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="Textinput-Control"
      type="number"
      value="42"
    />
    <span
      class="Textinput-Box"
    />
  </span>
</span>
`;

exports[`TimeInput  Check snapshots disabled 1`] = `
<span
  class="TimeInput TimeInput_disabled"
>
  <span
    class="Textinput Textinput_disabled Textinput_theme_normal Textinput_size_s Textinput_baseline TimeInput-Hours"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="Textinput-Control"
      disabled=""
      type="number"
      value="16"
    />
    <span
      class="Textinput-Box"
    />
  </span>
  <span
    class="TimeInput-Delimiter"
  >
    :
  </span>
  <span
    class="Textinput Textinput_disabled Textinput_theme_normal Textinput_size_s Textinput_baseline TimeInput-Minutes"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="Textinput-Control"
      disabled=""
      type="number"
      value="42"
    />
    <span
      class="Textinput-Box"
    />
  </span>
</span>
`;

exports[`TimeInput  Check snapshots with inputId 1`] = `
<span
  class="TimeInput"
>
  <span
    class="Textinput Textinput_theme_normal Textinput_size_s Textinput_baseline TimeInput-Hours"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="Textinput-Control"
      id="some_id"
      type="number"
      value="16"
    />
    <span
      class="Textinput-Box"
    />
  </span>
  <span
    class="TimeInput-Delimiter"
  >
    :
  </span>
  <span
    class="Textinput Textinput_theme_normal Textinput_size_s Textinput_baseline TimeInput-Minutes"
  >
    <input
      aria-invalid="false"
      autocomplete="off"
      class="Textinput-Control"
      type="number"
      value="42"
    />
    <span
      class="Textinput-Box"
    />
  </span>
</span>
`;
